tests/spec/emit/snapshots/interop_nullable_collection_field_assign_through_go_struct_alias_unwraps.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/x509"
  import "go:net/url"
  
  type Cert = x509.Certificate
  
  fn main() {
    let u = url.URL {
      Scheme: "https",
      Host: "example.com",
      ..,
    }
    let mut cert: Cert = x509.Certificate {
      PublicKey: 0,
      ..,
    }
    let urls: Slice<Option<Ref<url.URL>>> = [Some(&u)]
    cert.URIs = urls
    let _ = cert
  }
---
package main

import (
	"crypto/x509"
	lisette "github.com/ivov/lisette/prelude"
	"net/url"
)

type Cert = x509.Certificate

func main() {
	u := url.URL{
		Scheme: "https",
		Host:   "example.com",
	}
	cert := x509.Certificate{PublicKey: 0}
	urls := []lisette.Option[*url.URL]{lisette.MakeOptionSome(&u)}
	unwrapped := make([]*url.URL, len(urls))
	for i, v := range urls {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		}
	}
	cert.URIs = unwrapped
	_ = cert
}
