tests/spec/emit/snapshots/interop_nullable_collection_field_read_through_go_struct_alias_wraps.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:crypto/x509"
  import "go:net/url"
  
  type Cert = x509.Certificate
  
  fn main() {
    let u = url.URL {
      Scheme: "https",
      Host: "example.com",
      ..,
    }
    let cert: Cert = x509.Certificate {
      URIs: [Some(&u)],
      PublicKey: 0,
      ..,
    }
    let urls = cert.URIs
    let first = urls[0]
    match first {
      Some(value) => { let _ = value },
      None => { let _ = 0 },
    }
  }
---
package main

import (
	"crypto/x509"
	lisette "github.com/ivov/lisette/prelude"
	"net/url"
)

type Cert = x509.Certificate

func main() {
	u := url.URL{
		Scheme: "https",
		Host:   "example.com",
	}
	src := []lisette.Option[*url.URL]{lisette.MakeOptionSome(&u)}
	unwrapped := make([]*url.URL, len(src))
	for i, v := range src {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		}
	}
	cert := x509.Certificate{
		URIs:      unwrapped,
		PublicKey: 0,
	}
	raw := cert.URIs
	wrapped := make([]lisette.Option[*url.URL], len(raw))
	for i_1, v_1 := range raw {
		if v_1 != nil {
			wrapped[i_1] = lisette.MakeOptionSome[*url.URL](v_1)
		} else {
			wrapped[i_1] = lisette.MakeOptionNone[*url.URL]()
		}
	}
	urls := wrapped
	first := urls[0]
	if first.Tag == lisette.OptionSome {
		_ = first.SomeVal
	}
}
