tests/spec/emit/snapshots/interop_nullable_field_assign_through_go_struct_alias_unwraps.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:flag"
  
  type MyFlag = flag.Flag
  
  fn main() {
    let mut f: MyFlag = flag.Flag { .. }
    f.Value = None
  }
---
package main

import "flag"

type MyFlag = flag.Flag

func main() {
	f := flag.Flag{}
	f.Value = nil
}
