tests/spec/emit/snapshots/interop_nullable_function_alias_direct_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/scheduler"
  
  fn main() {
    let cmd = scheduler.MakeCmd()
    match cmd {
      Some(c) => { let _ = c },
      None => {},
    }
  }
---
package main

import (
	"example.com/scheduler"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	raw := scheduler.MakeCmd()
	cmd := lisette.OptionFromNilable[scheduler.Cmd](raw, raw == nil)
	if cmd.Tag == lisette.OptionSome {
		_ = cmd.SomeVal
	}
}
