tests/spec/emit/snapshots/interop_nullable_function_alias_some_lambda.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/scheduler"
  
  fn main() {
    let n = 42
    let cmd: Option<scheduler.Cmd> = Some(|| n)
    let _ = cmd
  }
---
package main

import (
	"example.com/scheduler"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	n := 42
	cmd := lisette.MakeOptionSome[scheduler.Cmd](func() int {
		return n
	})
	_ = cmd
}
