tests/spec/emit/snapshots/interop_nullable_let_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:flag"
  
  fn main() {
    let f = flag.Lookup
    let r = f("verbose")
    match r {
      Some(v) => { let _ = v },
      None => {},
    }
  }
---
package main

import (
	"flag"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	f := flag.Lookup
	raw := f("verbose")
	r := lisette.OptionFromNilable[*flag.Flag](raw, raw == nil)
	if r.Tag == lisette.OptionSome {
		_ = r.SomeVal
	}
}
