tests/spec/emit/snapshots/interop_nullable_return_pos.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:flag"
  
  fn make_lookup() -> fn(string) -> Option<Ref<flag.Flag>> {
    flag.Lookup
  }
  
  fn main() {
    let f = make_lookup()
    let r = f("verbose")
    match r {
      Some(v) => { let _ = v },
      None => {},
    }
  }
---
package main

import (
	"flag"
	lisette "github.com/ivov/lisette/prelude"
)

func makeLookup() func(string) *flag.Flag {
	return flag.Lookup
}

func main() {
	f := makeLookup()
	raw := f("verbose")
	r := lisette.OptionFromNilable[*flag.Flag](raw, raw == nil)
	if r.Tag == lisette.OptionSome {
		_ = r.SomeVal
	}
}
