tests/spec/emit/snapshots/interop_nullable_slice_element.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:flag"
  
  fn main() {
    let arr: Slice<fn(string) -> Option<Ref<flag.Flag>>> = [flag.Lookup]
    let r = arr[0]("verbose")
    match r {
      Some(v) => { let _ = v },
      None => {},
    }
  }
---
package main

import (
	"flag"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	arr := []func(string) *flag.Flag{flag.Lookup}
	raw := arr[0]("verbose")
	r := lisette.OptionFromNilable[*flag.Flag](raw, raw == nil)
	if r.Tag == lisette.OptionSome {
		_ = r.SomeVal
	}
}
