tests/spec/emit/snapshots/interop_option_of_aliased_interface_uses_is_nil_interface.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/evts"
  import "go:fmt"
  
  fn main() {
    match evts.Peek() {
      Some(e) => fmt.Println(e),
      None => fmt.Println("none"),
    }
  }
---
package main

import (
	"example.com/evts"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	if e := evts.Peek(); !lisette.IsNilInterface(e) {
		fmt.Println(e)
	} else {
		fmt.Println("none")
	}
}
