tests/spec/emit/snapshots/interop_option_ref_slice_option.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    match aws.Make() {
      Some(xs) => aws.Use(Some(xs)),
      None => aws.Use(None),
    }
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	raw := aws.Make()
	var option lisette.Option[*[]lisette.Option[string]]
	if raw != nil {
		src := *raw
		wrapped := make([]lisette.Option[string], len(src))
		for i, v := range src {
			if v != nil {
				wrapped[i] = lisette.MakeOptionSome[string](*v)
			} else {
				wrapped[i] = lisette.MakeOptionNone[string]()
			}
		}
		ref := &wrapped
		option = lisette.MakeOptionSome[*[]lisette.Option[string]](ref)
	} else {
		option = lisette.MakeOptionNone[*[]lisette.Option[string]]()
	}
	if option.Tag == lisette.OptionSome {
		src_1 := option.SomeVal
		src_2 := *src_1
		unwrapped := make([]*string, len(src_2))
		for i_1, v_1 := range src_2 {
			if v_1.Tag == lisette.OptionSome {
				unwrapped[i_1] = &v_1.SomeVal
			} else {
				unwrapped[i_1] = nil
			}
		}
		ref_1 := &unwrapped
		aws.Use(ref_1)
	} else {
		aws.Use(nil)
	}
}
